# AsyncTaskTrackerSchemas

./: README.md  pyproject.toml  requirements.txt  schema_registry.py  setup.cfg  setup.py
Auth/UserDeleted/: 1.json
auth/UserCreated/: 1.py
auth/UserDeleted/: 1.py
auth/UserUpdated/: 1.py
python/: setup.cfg
python/async_task_tracker_schemas/: events.py
python/schema_regisrty/: schema_registry.py
schemas/Accounting/BalanceCreated/: 1.json
schemas/Auth/UserCreated/: 1.json
schemas/Auth/UserDeleted/: 1.json
schemas/Auth/UserUpdated/: 1.json
schemas/Tracker/TaskAssigned/: 1.json  2.json  3.json
schemas/Tracker/TaskCompleted/: 1.json  2.json  3.json
src/uber_popug_schemas/: events.py
src/uber_popug_schemas/Auth/UserDeleted/: 1.json
src/uber_popug_schemas/Tracker/TaskAssigned/: 1.json
src/uber_popug_schemas/Tracker/TaskCompleted/: 1.json
src/uber_popug_shemas/: schema_registry.py
src/uber_popug_shemas/Auth/UserUpdated/: 1.json
