# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pylint.MESSAGE_CONTROL]
disable="""
    bad-continuation,
    no-else-return,
    too-few-public-methods,
    line-too-long,
    duplicate-code,
    import-error,
    unused-argument,
    no-self-use,
    import-outside-toplevel,
    fixme,
    unsubscriptable-object,
    too-many-arguments,
    too-many-public-methods,
    unnecessary-pass
"""

[tool.pylint.REPORTS]
reports="no"

[tool.pylint.FORMAT]
max-line-length="88"

[tool.pylint.BASIC]
good-names="_,i,j,k,e,qs,pk,setUp,tearDown,maxDiff,default_app_config"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docker
    | migrations
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
default_section = "THIRDPARTY"
skip = "migrations"