[metadata]
name = async_task_tracker_schemas
version = 2.0.0
author = Dmitry Gubich
author_email = gubich97@gmail.com
description = Schema registry for AsyncTaskTracker
license = MIT License

[options]
include_package_data = True
install_requires =
    jsonschema >= 4.19.0

[options.package_data]
* = *.json